--- a/src/main/resources/assets/toastermod/lang/en_us.json
+++ b/src/main/resources/assets/toastermod/lang/en_us.json
@@ -4,7 +4,8 @@
 	
 	"item.toastermod.bread_slice": "Slice of Bread",
 	"item.toastermod.toast_slice": "Slice of Toast",
-	"item.toastermod.toaster_sword": "Benjamin Franklin's Microwave of Excessive Voltage",
+	"item.toastermod.toaster_sword": "Benjamin Franklin's Health and Safety Rod",
+	"item.toastermod.toaster_shoes": "Toast Propelled Rocket Shoes",
 	
 	"itemGroup.basicmod": "Basic Mod"
 }
