Added sound to ToasterBlock, in addition to the foundation for networking proxies. Changed the toaster mod creative tab logic to function properly too.

--- a/src/main/resources/assets/toastermod/lang/en_us.json
+++ b/src/main/resources/assets/toastermod/lang/en_us.json
@@ -7,5 +7,8 @@
 	"item.toastermod.toaster_sword": "Benjamin Franklin's Health and Safety Rod",
 	"item.toastermod.toaster_shoes": "Toast Propelled Rocket Shoes",
 	
-	"itemGroup.basicmod": "Basic Mod"
+	"itemGroup.toasterMod": "Toaster Mod",
+	
+	"subtitle.toaster_up": "Toaster pops up",
+	"subtitle.toaster_up": "Toaster pressed down"
 }
