Added two new things: - Toaster Launcher - Toaster Arrow
Functions identically to the pre-existing bow and arrow.

--- a/src/main/resources/assets/toastermod/lang/en_us.json
+++ b/src/main/resources/assets/toastermod/lang/en_us.json
@@ -6,8 +6,10 @@
 	"item.toastermod.toast_slice": "Slice of Toast",
 	"item.toastermod.toaster_sword": "Benjamin Franklin's Health and Safety Rod",
 	"item.toastermod.toaster_shoes": "Toast Propelled Rocket Shoes",
+	"item.toastermod.toaster_arrow": "Toaster Arrow",
+	"item.toastermod.toaster_launcher": "Toaster Bow",
 	
-	"itemGroup.toasterMod": "Toaster Mod",
+	"itemGroup.toaster_mod": "Toaster Mod",
 	
 	"subtitle.toaster_up": "Toaster pops up",
 	"subtitle.toaster_up": "Toaster pressed down"
