--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,327 @@
+Build: 1.14.3-27.0.60 - Fri Jul 19 16:08:38 GMT 2019
+	cpw:
+		Update mappings to 20190719 in prep for 1.14.4..
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.3-27.0.59 - Thu Jul 18 21:22:01 GMT 2019
+	github:
+		Remove OnlyIn Client Distribution from Effect and EffectType methods.
+		(#5925)
+
+=========
+Build: 1.14.3-27.0.58 - Thu Jul 18 21:15:19 GMT 2019
+	lex:
+		Change default BrewingRecipe to use an Ingredient for the input instead
+		of ItemStack. Closes #5944 Add AT for GameRules.register Closes #5946
+		Fix Forge Blockstate loader model path is inconsistent with vanilla
+		blockstates Closes #5892 Fix client crashing when opting not to load a
+		world when there's missing blocks Closes #5886
+
+=========
+Build: 1.14.3-27.0.57 - Wed Jul 17 05:38:23 GMT 2019
+	lex:
+		Fix CheckSpawn event logic for natural spawns.
+
+=========
+Build: 1.14.3-27.0.56 - Tue Jul 16 23:03:04 GMT 2019
+	lex:
+		Fixed item breaking particles not capturing current state of the
+		ItemStack. Closes #5934
+
+=========
+Build: 1.14.3-27.0.55 - Tue Jul 16 19:47:33 GMT 2019
+	ewewukek:
+		Fix RenderSpecificHandEvent firing with wrong hand stack (#5927)
+
+=========
+Build: 1.14.3-27.0.54 - Tue Jul 16 19:41:28 GMT 2019
+	mods.itsmeow:
+		 [1.14.x] Fix text positioning issues caused by scaling loading screen 
+		(#5932)
+
+=========
+Build: 1.14.3-27.0.53 - Tue Jul 16 18:53:16 GMT 2019
+	lex:
+		Fixed PlayerSleepInBedEvent pos is always null Closes #5936 Fixed
+		decompile error causing Endless Loop in ModelBackery if model errors
+		exist. Fixed NPEs related to teleporting players without portals.
+
+=========
+Build: 1.14.3-27.0.52 - Tue Jul 16 16:59:45 GMT 2019
+	lex:
+		Add simple concurrency protection to Server world list. Closes #5938 and
+		#5739
+
+=========
+Build: 1.14.3-27.0.51 - Mon Jul 15 02:48:45 GMT 2019
+	cpw:
+		Update modlauncher to the 3.x series.
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.3-27.0.50 - Thu Jul 11 03:14:20 GMT 2019
+	tterrag1098:
+		Rework GuiModList mod info to use custom scrolling panel impl
+
+=========
+Build: 1.14.3-27.0.49 - Thu Jul 11 00:39:30 GMT 2019
+	lex:
+		Fix race condition in client mouse handler. Closes #5888
+
+	lex:
+		Cleanup Forge's Access Transformer, and add ATs for
+		Block.Properties#noDrop, and AxeItem/PickaxeItem. Closes #5866 and
+		Closes #5921
+
+=========
+Build: 1.14.3-27.0.47 - Wed Jul 10 02:21:09 GMT 2019
+	lex:
+		Re-implement state.onBlockExploded() Closes #5914
+
+	lex:
+		Implement Item.isRepairable in Crafting and Grindstone. Closes #5917
+
+	lex:
+		Implemented Item.get/setDamage hooks. Closes #5899
+
+	lex:
+		Added LootPool.Builder#bonusRolls setter. Closes #5887
+
+=========
+Build: 1.14.3-27.0.43 - Tue Jul 09 03:43:09 GMT 2019
+	williewillus:
+		Add general damage hook for items. Closes #5502 (#5670)
+
+=========
+Build: 1.14.3-27.0.42 - Tue Jul 09 03:14:52 GMT 2019
+	lex:
+		Fix syntax error in IRenderHandler.
+
+	lex:
+		Pass tick counter to custom render handlers (#5744)
+
+=========
+Build: 1.14.3-27.0.40 - Tue Jul 09 02:55:01 GMT 2019
+	support:
+		Fix logoFile not working properly (#5775)
+
+	37298044+Cadiboo:
+		Fire Loading event (#5795)
+
+=========
+Build: 1.14.3-27.0.38 - Tue Jul 09 02:49:22 GMT 2019
+	37298044+Cadiboo:
+		Added documentation to ObfuscationReflectionHelper adn deprecated index
+		based functions. (#5893)
+
+	bk1325:
+		Add isServer and isClient methods to LogicalSide (#5606)
+		* Add helper methods to LogicalSide.
+		
+		* Fix backwards docs.
+
+	sargun.vohra:
+		Throw exception when a mod returns null from a dispatched capability
+		provider (#5646)
+
+	ichttt:
+		Fixed BakedModelWrapper not delegating new methods (#5761)
+
+	ichttt:
+		Add IModelData to getParticleTexture (#5756)
+
+	alucas:
+		Add InputEvent documentation (#5698)
+
+	ichttt:
+		Adds some explanatory javadocs and check world in ModelDataManager
+		(#5762)
+
+=========
+Build: 1.14.3-27.0.31 - Tue Jul 09 02:43:35 GMT 2019
+	lex:
+		Fixed EntityJoinWorldEvent not being fired when player is added to
+		ServerWorld. #5827 Fixed wrong example path for the access transformer
+		in the MDK build.gradle. #5891 Added getters for mouse x/y velocity and
+		if the middle-mouse button is being held down. #5776 Modify issue
+		template for better clarity. #5874 Fixed grindstone not using
+		ItemStack-sensitive getMaxDamage. #5831 Added
+		ParticleManager.registerFactory to Forge's AT. #5896 Fixed NPE in
+		SidedInvWrapper when side was null. #5787 Moved
+		EndermanEntity.setAttackTarget super call to allow
+		LivingSetAttackTargetEvent the ability to override default behavior.
+		#5778 Added field to make "Looking at" debug info maximum distance
+		configurable #5714
+
+=========
+Build: 1.14.3-27.0.30 - Mon Jul 08 22:59:04 GMT 2019
+	daemon.umbra:
+		Disable Config Button when no mods are selected (#5905)
+		Closes #5889
+
+=========
+Build: 1.14.3-27.0.29 - Mon Jul 08 22:53:13 GMT 2019
+	me+github:
+		Fix link applying to whole component in chat if component starts with
+		link (#5909)
+
+	daemon.umbra:
+		Fixed #5895: Shearing via Displenser drops Shears (#5906)
+
+	tedstar.dev:
+		Fix MC-258 on mod list screen, enable sorting, minor tweaks. (#5846)
+
+=========
+Build: 1.14.3-27.0.26 - Mon Jul 08 22:46:01 GMT 2019
+	gerjan2001:
+		Added harvestLevel and harvestTool setter to the Block.Properties.
+		(#5916)
+
+=========
+Build: 1.14.3-27.0.25 - Fri Jul 05 20:26:34 GMT 2019
+	lex:
+		Fix installer realms issue on server. Uptake EventBus changes to fix
+		some potential dead locks.
+
+=========
+Build: 1.14.3-27.0.24 - Thu Jul 04 20:03:53 GMT 2019
+	elepet1906:
+		Fix old entity not being removed on dimension change (#5833)
+
+=========
+Build: 1.14.3-27.0.23 - Wed Jul 03 19:35:33 GMT 2019
+	primetoxinzz:
+		Update TextureStitchEvent.Pre to give access to the list of
+		ResourceLocations that will be loaded as textures. (#5870)
+
+=========
+Build: 1.14.3-27.0.22 - Wed Jul 03 08:08:39 GMT 2019
+	lex:
+		Add installer processor to deobfuscate Mincraft's Realms library. This
+		task will processes the current realms library from the json, so the
+		installer must be re-ran every time they update it.
+
+=========
+Build: 1.14.3-27.0.21 - Tue Jul 02 20:08:57 GMT 2019
+	gigaherz:
+		Redirect a method to the recipe book container, to allow modded screens
+		to have a recipe book. (#5873)
+
+=========
+Build: 1.14.3-27.0.20 - Tue Jul 02 20:03:05 GMT 2019
+	diesieben07:
+		Fix WorldEvent.Unload not firing on the client (fixes #5880) (#5884)
+
+=========
+Build: 1.14.3-27.0.19 - Tue Jul 02 19:57:14 GMT 2019
+	diesieben07:
+		Fix TickEvent.PlayerTickEvent firing twice for tick end (fixes #5878)
+		(#5885)
+
+=========
+Build: 1.14.3-27.0.18 - Tue Jul 02 18:55:13 GMT 2019
+	lex:
+		Fix type cast issues in ForgeConfig values. Closes #5894 Added config
+		value set and save functions. By default mod configs are auto-saved, so
+		you do not need to call save unless you create your own Config object.
+
+=========
+Build: 1.14.3-27.0.17 - Mon Jul 01 03:49:18 GMT 2019
+	cpw:
+		Remove legacy StartupProgress. Implement properly scalable progress
+		thanks to @gigaherz. Closes #5863. Implement API for pushing messages to
+		the startup screen from mods. Add memory display.
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.3-27.0.16 - Sat Jun 29 21:05:43 GMT 2019
+	cpw:
+		Update coremods to newer version, with support for new targets.
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.3-27.0.15 - Fri Jun 28 00:23:46 GMT 2019
+	lex:
+		Fix duplicate WorldEvent.Unload call in client key handler. Add recipe
+		generator to replace vanilla recipes with Forge tags.
+
+=========
+Build: 1.14.3-27.0.14 - Thu Jun 27 17:57:18 GMT 2019
+	lex:
+		Fix dimension save data invalid cache being to aggressive.
+
+=========
+Build: 1.14.3-27.0.13 - Wed Jun 26 20:23:56 GMT 2019
+	alalwww:
+		Fix garbled "µs" (#5818)
+
+=========
+Build: 1.14.3-27.0.12 - Wed Jun 26 01:16:22 GMT 2019
+	lex:
+		Fix fmluserdevdata not being a valid launch target.
+
+=========
+Build: 1.14.3-27.0.11 - Wed Jun 26 01:04:02 GMT 2019
+	lex:
+		Split userdev data entry point into it's own provider to fix duplicate
+		mod issue.
+
+=========
+Build: 1.14.3-27.0.10 - Tue Jun 25 23:57:02 GMT 2019
+	tterrag:
+		Fix configs correcting numeric values when the primitive type differs
+		Fix configs with range not clamping the corrected value, and instead 
+		just replacing with the default
+		Closes #5855
+
+=========
+Build: 1.14.3-27.0.9 - Tue Jun 25 21:02:27 GMT 2019
+	bs2609:
+		Fix item placement losing NBT data in creative mode (#5757)
+
+=========
+Build: 1.14.3-27.0.8 - Tue Jun 25 20:56:41 GMT 2019
+	kevin.iselborn:
+		 Add extension to write entry id's to PacketBuffer's (#5812)
+
+=========
+Build: 1.14.3-27.0.7 - Tue Jun 25 20:50:53 GMT 2019
+	33880787+RedBorg:
+		Add isItemValid check for ItemStackHandler (#5850)
+
+=========
+Build: 1.14.3-27.0.5 - Tue Jun 25 20:45:02 GMT 2019
+	tedstar.dev:
+		[1.14.x] Replace dye items in Forge tags. (#5843)
+
+=========
+Build: 1.14.3-27.0.4 - Tue Jun 25 20:38:40 GMT 2019
+	Unnoen:
+		Update readme and issue template. (#5773)
+
+=========
+Build: 1.14.3-27.0.3 - Tue Jun 25 17:25:42 GMT 2019
+	donalddani9612:
+		implement Ingredient.getSerializer for custom ingredients (#5813)
+
+=========
+Build: 1.14.3-27.0.2 - Tue Jun 25 03:06:02 GMT 2019
+	lex:
+		Fix vines and scaffolding not being climbable. Fix powered rails not
+		spreading power correctly. Closes: #5854
+
+=========
+Build: 1.14.3-27.0.1 - Tue Jun 25 02:37:14 GMT 2019
+	lex:
+		Fix misaligned ServerWorld initCapabilities patch.
+
+=========
+Build: 1.14.3-27.0.0 - Tue Jun 25 02:01:47 GMT 2019
+	lex:
+		Initial 1.14.3 update.
+
+=========
 Build: 1.14.2-26.0.63 - Sun Jun 23 23:55:05 GMT 2019
 	cpw:
 		Fix too many registries being sent from server to client
